--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -344,18 +344,33 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="28dp"
                 android:layout_marginBottom="28dp"
+                android:orientation="vertical"
                 android:gravity="center">
 
-                <Button
-                    android:id="@+id/btnGotoChangePassword"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Change Password"
-                    android:textSize="12sp" />
+                    android:orientation="horizontal">
 
-                <Space
-                    android:layout_width="28dp"
-                    android:layout_height="match_parent" />
+                    <Button
+                        android:id="@+id/btnChangeProfile"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:text="Change profile"
+                        android:textSize="12sp" />
+
+                    <Space
+                        android:layout_width="12dp"
+                        android:layout_height="match_parent" />
+
+                    <Button
+                        android:id="@+id/btnGotoChangePassword"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:text="Change Password"
+                        android:textSize="12sp" />
+
+                </LinearLayout>
 
                 <Button
                     android:id="@+id/btnLogout"
